# taiat

./: Makefile  README.md  base.py  builder.py  db.py  engine.py  generic_matcher.py  pyproject.toml  query.py  requirements.txt  service.py  setup.py  taiat.py  test_graph_architect.py
docs/: prolog_integration.md
examples/: ml_agents.py  ml_output_matcher.py  ml_workflow.py
src/examples/: ml_agent_reference.md  ml_agents.py  ml_output_matcher.py  ml_workflow.py
src/haskell/: Main.hs  PathPlanner.hs  PathPlannerTest.hs  README.md  build.sh  final_performance_comparison.py  haskell_interface.py  path_planner_interface.py  performance_results.json  taiat-path-planner.cabal  test_full_workflow.hs  test_path_planner.hs  test_simple_runner.hs
src/prolog/: README.md  __init__.py  optimized_prolog_interface.py  path_planner.pl  path_planner_test.pl  proper_global_comparison.py  taiat_path_planner.py  test_path_planner.py
src/taiat/: FINAL_PERFORMANCE_RESULTS.md  JOB_MANAGER_README.md  PERFORMANCE_COMPARISON_RESULTS.md  PROLOG_PERFORMANCE_ANALYSIS.md  README_agent_registry.md  base.py  builder.py  db.py  engine.py  enhanced_builder.py  enhanced_manager.py  executor.py  generic_matcher.py  graph_architect.py  init_worker.py  job_manager.py  manager.py  metrics.py  node_generator.py  run_worker.py  tjm_cli.py  worker.py
src/taiat/templates/: generate_nodes.j2  generic_output_matcher.j2
src/tests/: debug_parameter_matching.py  minimal_test.py  test_agents.py  test_executor.py  test_graph.py  test_haskell_path_planner.py  test_haskell_unit_suite.py  test_node_generator.py  test_parameter_constraint.py  test_parameter_constraint_prolog.py  test_parameters.py  test_path_planner.py  test_worker.py
tests/: test_agents.py  test_db.py  test_graph.py
