[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taiat"
version = "0.0.2"
authors = [
  { name="Bill Pentney", email="wpentney2@gmail.com" },
]
description = "taiat is a tool for managing dependencies in AI agents with Prolog integration for path planning"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
prolog = []  # Prolog integration (requires gprolog system dependency)
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/pypa/taiat"
Issues = "https://github.com/pypa/taiat/issues"
Documentation = "https://github.com/pypa/taiat/tree/main/docs"
