cabal-version: 2.4
name:                taiat-path-planner
version:             0.1.0.0
license:             MIT
author:              Taiat Team

executable taiat-path-planner
    main-is:             Main.hs
    other-modules:       PathPlanner
    build-depends:       base ^>=4.13.0.0
                       , aeson
                       , text
                       , bytestring
                       , time
                       , unordered-containers
                       , containers
    hs-source-dirs:      .
    default-language:    Haskell2010
    ghc-options:         -Wall -O2 